working on admin

--- a/Rewards/src/main/resources/messages.properties
+++ b/Rewards/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 Match.new_user.passwordConfirmation=Password and Password Confirmation must match
-Size.new_user.email=You must add your Email
+Size.new_user.login=You must add your Login
 Size.new_user.name=You must add your Name
 Size.new_user.password=Password must be greater than 8 characters
-Unique.new_user.email=Email already taken
+Unique.new_user.login=Login already taken
