--- a/Rewards/src/main/resources/messages.properties
+++ b/Rewards/src/main/resources/messages.properties
@@ -1,5 +1,2 @@
-Match.new_user.passwordConfirmation=Password and Password Confirmation must match
-Size.new_user.login=You must add your Login
-Size.new_user.name=You must add your Name
-Size.new_user.password=Password must be greater than 8 characters
-Unique.new_user.login=Login already taken
+NotEmpty.new_user.login=Please enter your Login.
+NotEmpty.new_user.login=Please enter the code provided in order to participate.
